Реализация первой версии виртуальной машины